# makenew-pyskill

./: CHANGELOG.md  LICENSE.txt  Makefile  README.rst  makenew.sh  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/setup/: action.yml
.github/workflows/: format.yml  main.yml  publish.yml  version.yml
notebooks/: usual_suspects.py
notebooks/template/: template.ipynb
notebooks/tutorial/: 1 - Setup.ipynb  2 - Download data.ipynb  3 - Make header tome.ipynb  4 - Do datascience exploration.ipynb  4 - Do datascience.ipynb  5 - Create tome.ipynb  6 - Train data science models.ipynb  7 - Getting csds data from the ADX.ipynb  7 - Getting data from the ADX.ipynb  7 - Transfer Dataset to S3.ipynb  8 - Getting tomes from the ADX.ipynb
pureskillgg_makenew_pyskill/env_functions/: env_setup.py
pureskillgg_makenew_pyskill/notebook/: __init__.py  setup_notebook.py
pureskillgg_makenew_pyskill/tutorial/: __init__.py  footsteps_example.py
pureskillgg_makenew_pyskill/tutorial_datascience/: footsteps_example.py
