[tool.poetry]
name = "pureskillgg-makenew-pyskill"
version = "0.3.0"
description = "Package skeleton for a PureSkill.gg PySkill."
authors = ["PureSkill.gg <contact@pureskill.gg>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/pureskillgg/makenew-pyskill"
repository = "https://github.com/pureskillgg/makenew-pyskill"
include = ['poetry.lock']

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
pandas = "^1.4.1"
python-dotenv = "^0.20.0"
pureskillgg-dsdk = "^0.30.0"
pureskillgg-csgo-dsdk = "^0.9.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
bump2version = "^1.0.0"
pylint = "^2.4.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-runner = "^6.0.0"
pytest-watch = "^4.2.0"
twine = "^4.0.0"
wheel = "^0.34.0"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
