[project]
name = "pureskillgg-makenew-pyskill"
version = "0.5.1"
description = "Package skeleton for a PureSkill.gg PySkill."
authors = [{ name = "PureSkill.gg", email = "contact@pureskill.gg" }]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.14,<4.0"
dependencies = [
    "numpy>=2.4.0,<3.0.0",
    "pandas>=2.3.0,<3.0.0",
    "python-dotenv>=1.2.0,<2.0.0",
    "requests>=2.27.1,<3.0.0",
    "pureskillgg-dsdk>=3.0.0,<4.0.0",
    "pureskillgg-csgo-dsdk>=3.0.0,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/pureskillgg/makenew-pyskill"
Repository = "https://github.com/pureskillgg/makenew-pyskill"

[dependency-groups]
dev = [
    "black>=26.0.0,<27.0.0",
    "pylint>=4.0.0,<5.0.0",
    "pytest>=9.0.0,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-watch>=4.2.0,<5.0.0",
    "matplotlib>=3.11.0,<4.0.0",
    "jupyter>=1.0.0,<2.0.0",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "pureskillgg_makenew_pyskill"

[tool.black]
target-version = ["py314"]
